# mcpSafetyScanner

./: README.md  pyproject.toml
examples/: example_config.json  mio_test_report.md
mcpsafety/scanner/: scan.py
